Bug 92702 - Unable to select menu items that were initially off-screen
Summary: Unable to select menu items that were initially off-screen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta3
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, bisected, regression
: 92774 93483 94417 94619 95333 97136 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-13 13:56 UTC by k-j
Modified: 2016-08-30 15:43 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description k-j 2015-07-13 13:56:01 UTC
Buttons of a toolbar can't be en-/disabled by right click on toolbar "Visible Buttons" if they are out of display by starting the context menu.

Procedure:
Right click on toolbar "Standard"
"Visible Buttons"
Scrolling to button which isn't displayed at the first time. E.g. "Line", "Data Base".
It can't be en- or disabled.
It depends on the display size.
Tried it with WIN10Preview and WIN8.1 64bit.

It seems that it is an "initial" problem.
Comment 1 Regina Henschel 2015-07-13 15:01:34 UTC
I have seen this with the "Standard" toolbar on Windows 7 starter. Right-click into the bar gives the context menu and this is so long, that it extends the screen height. I scroll down to see the last items. But clicking on them have no action although they are enabled. The toolbar does not show the arrows on the right side, although it cannot show all items.

I can solve the problem in two ways:
1. Use Tools > Customize and delete a lot of items, not only disable them but really delete them.
2. In Tools > Customize use the "Toolbar" drop-down and click on item "Restore Default Settings". Then the arrows on the right side exist and all active items react.

I agree, that it looks like missing initialization. 

I have made a fresh installation without existing user profile.
Comment 2 Laurent Balland 2015-07-24 11:29:07 UTC
Confirmed with:
- Version: 5.0.0.0.beta3
Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale : fr-FR (fr_FR)
- Version: 5.1.0.0.alpha1+
Build ID: 698b344fdf42cc9738d5e91cd27876ce1ff39daf
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-10_02:24:19
Locale: fr-FR (fr_FR)
- Version: 5.1.0.0.alpha1+
Build ID: 8cfdd81b70ef37927b40497ffd10034f28335034
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-24_02:47:18
Locale: fr-FR (fr_FR)

NO bug with:
- Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale : fr-FR (fr_FR)
- Version: 5.0.0.0.beta1+
Build ID: 5490bf204e2b1841e72ba0f906b2cf3cd12f583c
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-0, Time: 2015-05-28_21:56:25
Locale: fr-FR (fr_FR)
Comment 3 Laurent Balland 2015-07-24 20:37:07 UTC
Confirmed on Linux (OpenSuse 13.1) with:
- Version: 5.0.0.3
Build ID: f79b5ba13f5e6cbad23f8038060e556217e66632
Locale : fr-FR (fr_FR.UTF-8)
Comment 4 Laurent Balland 2015-08-29 17:01:19 UTC
Still present with master Version: 5.1.0.0.alpha1+
Build ID: b2363e98af7b0281279617e43b8fec5b898b9120
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-26_00:57:35
Locale: fr-FR (fr_FR.UTF-8)

and current 5.0 Version: 5.0.2.0.0+
Build ID: 47fb13510fe249bdc0c0b3bb8d9d5d8009a8974b
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-5-0, Time: 2015-08-29_05:47:46
Locale: fr-FR (fr_FR.UTF-8)
Comment 5 Michael Weghorn 2015-08-30 11:04:55 UTC
bibisect result (using the lo-linux-dbgutil repository):
 a814cee0b38cabf6a0c042e9bcc616c8d96cac0f is the first bad commit
commit a814cee0b38cabf6a0c042e9bcc616c8d96cac0f
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Wed Jun 10 05:50:52 2015 +0200

    2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3

:100644 100644 fe360e30f806f147b6163a2d4231e72683ed3aff fb9c4e8d3284245661ef4d5c922d891ce99ea13b M	build-info.txt
:040000 040000 d2e77dcdb4c55f2ced97b2d3b550f1efb2f458ac e235ef39a73c877f927d6c0eae21d8b5bb96225f M	opt



$ git bisect log
# bad: [184ab6da50da53ed96e649db1764d01b5671ba79] 2015-08-27: source-hash-e16e64dd862c8f386f80de43ad68e831e169d49d
# good: [2b392af9c8f54629e3a3a98a8c92fa5af1c6722f] 2015-05-20: source-hash-90e2dabb8d0bb5382234be776c2ad0e2d5d9e224
git bisect start '184ab6da50da53ed96e649db1764d01b5671ba79' '2b392af9c8f54629e3a3a98a8c92fa5af1c6722f'
# bad: [43d971d013fc757bfbe0fdec122ed1a9a693bd47] 2015-07-08: source-hash-ff669d1c7f692052534d1136d1ff4220433f8542
git bisect bad 43d971d013fc757bfbe0fdec122ed1a9a693bd47
# bad: [2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73] 2015-06-13: source-hash-a9286c302e96258f32d13fb66aced25750e82cd3
git bisect bad 2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73
# good: [587d15ec717aed5d4abe657f3a96d4de29565bc7] 2015-06-01: source-hash-e61fcfea5c2a306e44a053976e921160e78917ac
git bisect good 587d15ec717aed5d4abe657f3a96d4de29565bc7
# good: [1f8ef21cd72a4e63719a1bbb65d321a56ed80e88] 2015-06-07: source-hash-47cddc662efc470505f0b76427fa3092bae5550a
git bisect good 1f8ef21cd72a4e63719a1bbb65d321a56ed80e88
# bad: [a814cee0b38cabf6a0c042e9bcc616c8d96cac0f] 2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3
git bisect bad a814cee0b38cabf6a0c042e9bcc616c8d96cac0f
# good: [781479cf48e9cd137a4224ea0842af6d4fbba1c7] 2015-06-09: source-hash-d28102b1ed0c31500bbc68453a7b7613bd2bfa06
git bisect good 781479cf48e9cd137a4224ea0842af6d4fbba1c7
# first bad commit: [a814cee0b38cabf6a0c042e9bcc616c8d96cac0f] 2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3
Comment 6 Michael Weghorn 2015-08-30 11:17:29 UTC
The problem is introduced with the following commit:

commit 8ced97caa409d6dc8f69230145e9c9f281fb84fe
Author: Philippe Jung <phil.jung@free.fr>
Date:   Tue Jun 9 16:01:54 2015 +0200

    Last item of menu with title cannot be hilighted
    
    Seing the fix, it probably also impacts scrolled floating menus.
    
    Change-Id: Ia740573c3ed54cf01a57575a2ca00d49165be28d
    Reviewed-on: https://gerrit.libreoffice.org/16187
    Reviewed-by: Philippe Jung <phil.jung@free.fr>
    Tested-by: Philippe Jung <phil.jung@free.fr>


If I revert this commit on a recent version of master (I used 2bef9a434bdf5c6185a72616874c61eae1a0e718), the bug disappears.

The commit message already mentions, that this might impact scrolled menus.

@Philippe: Could you possibly have a look at this?
Comment 7 Maxim Monastirsky 2015-09-21 18:33:26 UTC
*** Bug 93483 has been marked as a duplicate of this bug. ***
Comment 8 Maxim Monastirsky 2015-09-21 18:33:53 UTC
*** Bug 94417 has been marked as a duplicate of this bug. ***
Comment 9 Maxim Monastirsky 2015-09-29 15:49:37 UTC
*** Bug 94619 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2015-09-30 20:32:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f1dca5083c5a301181786b563b165f19a9dec7f

tdf#92702 Unable to select menu items that were initially off-screen

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 László Németh 2015-09-30 20:34:35 UTC
Fixed with the revert of the bisected commit, and checked with the ODS test document of Bug 93483. Thanks!
Comment 12 Maxim Monastirsky 2015-10-01 07:12:59 UTC
@László: Fixing one bug by re-introducing another bug is not a solution. Now the bug that this commit tried to fix reproducible again. Try this:

1. Right click on any toolbar.
2. Try to choose the last item of the popup menu (i.e. "Close Toolbar").
Comment 13 Commit Notification 2015-10-08 07:20:50 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48a7d0492dbae60d644dd7be9b1b0826fdf36f63&h=libreoffice-5-0

tdf#92702 Unable to select menu items that were initially off-screen

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Maxim Monastirsky 2015-10-26 19:57:29 UTC
*** Bug 95333 has been marked as a duplicate of this bug. ***
Comment 15 Robinson Tryon (qubit) 2015-12-17 09:25:41 UTC Comment hidden (obsolete)
Comment 16 Maxim Monastirsky 2016-01-14 17:57:58 UTC
*** Bug 97136 has been marked as a duplicate of this bug. ***
Comment 17 Caolán McNamara 2016-08-30 15:43:39 UTC
*** Bug 92774 has been marked as a duplicate of this bug. ***