tdf#92702 Unable to select menu items that were initially off-screen

Revert "Last item of menu with title cannot be hilighted"

This reverts commit 8ced97caa409d6dc8f69230145e9c9f281fb84fe.